--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Sign In Page</title>
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/app.js" defer></script>
 </head>
 <body>
     <div class="page">
