adding some styles

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
             <form>
                 <div class="input-container">
                     <i class="fa fa-user input-icon"></i>
-                    <input type="text" class="input-field" placeholder="Your Name">
+                    <input type="text" class="input-field" placeholder="Your Name" required>
                 </div>
 
                 <div class="input-container">
                     <i class="fa fa-envelope input-icon"></i>
-                    <input type="email" class="input-field" placeholder="Your E-mail">
+                    <input type="email" class="input-field" placeholder="Your E-mail" required>
                 </div>
 
                 <div class="input-container">
                     <i class="fa fa-lock input-icon"></i>
-                    <input type="password" class="input-field" placeholder="Create Password">
+                    <input type="password" class="input-field" placeholder="Create Password" required>
                 </div>
 
                 <div class="strength-container">
@@ -46,7 +46,7 @@
                     <button class="create-account">Create Account
                     </button>
 
-                    <button class="sign-in">Sign In</button>
+                    <a class="sign-in">Sign In</a>
                 </div>
 
             </form>
